<resources>
    <string name="app_name">活动助手</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="manager">管理员</string>
    <string name="promulgator">发布者</string>
    <string name="participator">参与者</string>
    <string name="tip">请输入手机号</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="input_auth_code">输入验证码:</string>
    <string name="set_new_password">设置新密码:</string>
    <string name="confirm_new_password">确认新密码:</string>
    <string name="confirm">确认</string>
    <string name="go_back">返回</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>


    <string-array name="spinner1">
        <item>全部</item>
        <item>校级</item>
        <item>院级</item>
        <item>年级</item>
    </string-array>

    <string-array name="spinner2">
        <item>热门</item>
        <item>时间</item>
        <item>推荐</item>
    </string-array>
    <string name="title_activity_detail">ActivityDetail</string>


    <!---->


    <!--<string name="app_name">activitypromulgator</string>-->

    <!--<string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--<string name="navigation_drawer_close">Close navigation drawer</string>-->

    <!--<string name="action_settings">Settings</string>-->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!---->
    <!---->
    <!---->
    <!--
    <!-&ndash;&gt;-->
    <string name="hello_world">Hello world!</string>
    <string name="startColor">=#FFACDAE5</string>
    <string name="hello">Hello World, Sample_10_1!</string>
    <string name="act_find">Sample_10_1</string>
    <string name="inform_act">Sample_10_1</string>
    <string name="inform_view">Sample_10_1</string>
    <string name="activity_help">活动助手</string>

    <drawable name="night">#212d2d</drawable>
    <drawable name="day">#61ABE8</drawable>
</resources>
