<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/forgetPassword"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/graph5"
    tools:context="com.test.admin.login.MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="修改密码"
        android:textSize="40dp"
        />
    <LinearLayout
        android:layout_marginTop="120dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        >
    <EditText
        android:layout_marginLeft="35dp"
        android:layout_width="150dp"
        android:layout_height="fill_parent"
        android:maxLength="11"
        android:hint="@string/tip"
        android:background="@android:drawable/alert_light_frame"
        android:id="@+id/et1"
        />

    <Button
        android:id="@+id/send"
        android:layout_toRightOf="@id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_auth_code"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="180dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        >
    <TextView
        android:id="@+id/tv2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/et1"
        android:layout_marginLeft="45dp"
        android:text="@string/input_auth_code"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/et2"
        android:layout_toRightOf="@+id/tv2"
        android:layout_below="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@android:drawable/alert_light_frame"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="230dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        >
    <TextView
        android:id="@+id/tv3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_marginLeft="45dp"
        android:text="@string/set_new_password"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/et3"
        android:layout_toRightOf="@+id/tv3"
        android:layout_below="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:password="true"
        android:background="@android:drawable/alert_light_frame"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="280dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        >
    <TextView
        android:id="@+id/tv4"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_marginLeft="45dp"
        android:text="@string/confirm_new_password"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/et4"
        android:layout_toRightOf="@+id/tv4"
        android:layout_below="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:password="true"
        android:background="@android:drawable/alert_light_frame"
        />
    </LinearLayout>
    <Button
        android:id="@+id/btn1"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        />
    <Button
        android:id="@+id/btn2"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="165dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        />

</RelativeLayout>
